Add paragraph and selfie to webpage

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,14 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Olivia Shen's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Welcome to Olivia Shen's Portfolio</h1>
+      <p>I'm a computer science student at UC Davis with an interest in CS education. 
+        I love making art, walking outside, and having quality conversations with people.
+        I want to build products that encourage and bring people joy when times seem dark.
+        I also want to bring gender diversity to CS by teaching and mentoring younger students.</p>
+      <img id="selfie" src="/images/sunhat_selfie.jpeg" />
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
