--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,9 +14,8 @@
         I want to build products that encourage and bring people joy when times seem dark.
         I also want to bring gender diversity to CS by teaching and mentoring younger students.</p>
       <img id="selfie" src="/images/sunhat_selfie.jpeg" />
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click on the button to see the same message from the server!</p>
-      <button onclick="showServerMessage()">See Message</button>
+      <p>What makes my day?</p>
+      <button onclick="showServerMessage()">Find Out!</button>
       <div id="server-message"></div>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
