--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,7 +20,7 @@
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
-      <form method="POST">
+      <form action="/form-handler" method="POST">
         <p>Enter some text here:</p>
         <textarea name="text-input">hello world</textarea>
         <br/>
