--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,7 +20,7 @@
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
-      <a href="/contact">Contact Me</a>
+      <a href="/contact.html">Contact Me</a>
     </div>
   </body>
 </html>
