Modify contact.html form to trigger JS function on submit

--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -9,7 +9,7 @@
   <body>
     <div id="content">
       <h1>Contact me</h1>
-      <form action="/form-handler" method="POST">
+      <form action="#" onsubmit="submitHandler(this)">
         <p>Let's get in touch!</p>
         <label for="name-input">Name</label>
         <input type="text" id="name-input" name="name-input" placeholder="Your name"/>
