Add navbar to index.html

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,6 +7,12 @@
     <script src="script.js"></script>
   </head>
   <body>
+      <ul id="navbar">
+        <li><a href="/index.html">About</a></li>
+        <li><a href="/projects.html">Projects</a></li>
+        <li><a href="/fun.html">Fun</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
     <div id="content">
       <h1>Welcome to Olivia Shen's Portfolio</h1>
       <p>I'm a computer science student at UC Davis with an interest in CS education. 
@@ -20,7 +26,6 @@
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
-      <a href="/contact.html">Contact Me</a>
     </div>
   </body>
 </html>
