Modify FormHandlerServlet.java and contact.html to redirect to thanks.html

--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -2,14 +2,21 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Olivia Shen's Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Olivia Shen - Contact</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
+    <ul id="navbar">
+      <li><a href="/index.html">About</a></li>
+      <li><a href="/projects.html">Projects</a></li>
+      <li><a href="/fun.html">Fun</a></li>
+      <li><a href="/contact.html">Contact</a></li>
+    </ul>
     <div id="content">
       <h1>Contact me</h1>
-      <form action="#" onsubmit="submitHandler(this)">
+      <form action="/form-handler" method="POST">
         <p>Let's get in touch!</p>
         <label for="name-input">Name</label>
         <input type="text" id="name-input" name="name-input" placeholder="Your name"/>
