--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Olivia Shen's Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Olivia Shen - About</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
@@ -15,17 +16,12 @@
       </ul>
     <div id="content">
       <h1>Welcome to Olivia Shen's Portfolio</h1>
+      <img id="selfie" src="/images/sunhat_selfie.jpeg" />
       <p>I'm a computer science student at UC Davis with an interest in CS education. 
         I love making art, walking outside, and having quality conversations with people.
         I want to build products that encourage and bring people joy when times seem dark.
         I also want to bring gender diversity to CS by teaching and mentoring younger students.</p>
-      <img id="selfie" src="/images/sunhat_selfie.jpeg" />
-      <p>What makes my day?</p>
-      <button onclick="showServerMessage()">Find Out!</button>
-      <div id="server-message"></div>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
     </div>
+    
   </body>
 </html>
