--- a/portfolio/src/main/webapp/thanks.html
+++ b/portfolio/src/main/webapp/thanks.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="thanksMessage();">
     <ul id="navbar">
       <li><a href="/index.html">About</a></li>
       <li><a href="/projects.html">Projects</a></li>
@@ -15,6 +15,7 @@
       <li><a href="/contact.html">Contact</a></li>
     </ul>
     <div id="content">
+      <p id="thanks-message"></p>
     </div>
   </body>
 </html>
