Add project cards to project.html

--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -16,7 +16,27 @@
       </ul>
     <div id="content">
       <h1>Projects</h1>
-      
+      <div class="project">
+        <img class="proj-img" src="my-garden.png">
+        <div class="proj-desc">
+          <p><b>MyGarden</b></p>
+          <p>Enter description here.</p>
+          <p>
+            <a href="https://github.com/LivsWorld/mygarden">Github</a>
+          </p>
+        </div>
+      </div>
+      <div class="project">
+        <img class="proj-img" src="comfort-you.jpg">
+        <div class="proj-desc">
+          <p><b>Com4ort You</b></p>
+          <p>Enter description here.</p>
+          <p>
+            <a href="https://mellix.github.io/comfortyou.github.io/index.html">View</a> | 
+            <a href="https://github.com/Mellix/comfortyou.github.io">Github</a>
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
