Modified styling on all pages

--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -16,7 +16,7 @@
     </ul>
     <div id="content">
       <h1>Contact me</h1>
-      <form action="/form-handler" method="POST">
+      <form action="/form-handler" method="POST" id="contact-form">
         <p>Let's get in touch!</p>
         <label for="name-input">Name</label>
         <input type="text" id="name-input" name="name-input" placeholder="Your name"/>
@@ -27,7 +27,7 @@
         <label for="text-input">Message</label>
         <textarea id="text-input" name="text-input" placeholder="What do you want to talk about?"></textarea>
         <br/>
-        <input type="submit" />
+        <input class="button" type="submit" />
       </form>
     </div>
   </body>
