--- a/portfolio/src/main/webapp/fun.html
+++ b/portfolio/src/main/webapp/fun.html
@@ -16,8 +16,8 @@
       </ul>
     <div id="content">
       <h1>What makes my day?</h1>
-      <button onclick="showServerMessage()">Find Out!</button>
-      <div id="server-message"></div>
+      <button class="button" onclick="showServerMessage()">Find Out!</button>
+      <p id="server-message"></p>
     </div>
   </body>
 </html>
