--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -17,7 +17,7 @@
     <div id="content">
       <h1>Projects</h1>
       <div class="project">
-        <img class="proj-img" src="my-garden.png">
+        <img class="proj-img" src="/images/my-garden.png">
         <div class="proj-desc">
           <p><b>MyGarden</b></p>
           <p>Enter description here.</p>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="project">
-        <img class="proj-img" src="comfort-you.jpg">
+        <img class="proj-img" src="/images/comfort-you.jpg">
         <div class="proj-desc">
           <p><b>Com4ort You</b></p>
           <p>Enter description here.</p>
