--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,6 +17,11 @@
     <div id="content">
       <h1>Welcome to Olivia Shen's Portfolio</h1>
       <img id="selfie" src="/images/sunhat_selfie.jpeg" />
+      <p>
+        <a href="https://github.com/LivsWorld">Github</a> | 
+        <a href="https://www.linkedin.com/in/olivia-l-shen/">LinkedIn</a> | 
+        <a href="https://drive.google.com/file/d/1xtIa2y7hEAwhaGqPJy3Cm1YqqNV-HxQ8/view?usp=sharing" target="_blank">Resume</a>
+      </p>
       <p>I'm a computer science student at UC Davis with an interest in CS education. 
         I love making art, walking outside, and having quality conversations with people.
         I want to build products that encourage and bring people joy when times seem dark.
