Minor formatting modifications

--- a/portfolio/src/main/webapp/fun.html
+++ b/portfolio/src/main/webapp/fun.html
@@ -17,7 +17,7 @@
     <div id="content">
       <h1>What makes my day?</h1>
       <button class="button" onclick="showServerMessage()">Find Out!</button>
-      <p id="server-message"></p>
+      <div id="server-message"></div>
     </div>
   </body>
 </html>
