Modify README and projects.html

--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -20,8 +20,10 @@
         <img class="proj-img" src="/images/my-garden.png">
         <div class="proj-desc">
           <p><b>MyGarden</b></p>
-          <p>Enter description here.</p>
+          <p>June 2020 - CS50x final project</p>
+          <p>Web app allowing user to create account, then add, edit, or delete plants and garden tasks through a simple UI. Made with Flask in Python, Jinja HTML templating, and SQLite database.</p>
           <p>
+            <a href="https://youtu.be/h6dz65ZvARE">Video</a> | 
             <a href="https://github.com/LivsWorld/mygarden">Github</a>
           </p>
         </div>
@@ -30,7 +32,8 @@
         <img class="proj-img" src="/images/comfort-you.jpg">
         <div class="proj-desc">
           <p><b>Com4ort You</b></p>
-          <p>Enter description here.</p>
+          <p>July 2019 - Girls Who Code SIP</p>
+          <p>Website providing mental health resources created with 2 other participants. Mainly developed "Peace" page to display calming images and play music. Made with Github, HTML, CSS, and JavaScript.</p>
           <p>
             <a href="https://mellix.github.io/comfortyou.github.io/index.html">View</a> | 
             <a href="https://github.com/Mellix/comfortyou.github.io">Github</a>
